tests/miniJava/neg/004376_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public System.out.println int [] java ( ) { return 0 ; } }
